# ReelBrain

./: .gitignore  LICENSE  README.md  pyproject.toml
.ouroboros/: mechanical.toml  pm.md
.ouroboros/seeds/: reelbrain-v1.yaml
desktop/: README.md  index.html  package-lock.json  package.json
desktop/scripts/: package-macos.sh
desktop/src/: App.tsx  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/assets/: reelbrain-development-flow.mmd
docs/desktop-runtime/: architecture.md  implementation.md  requirements.md
docs/draft-feedback-loop/: architecture.md  implementation.md  (+1 more)
reelbrain/: __init__.py  agent_runtime.py  agent_tools.py  agents.py  cli.py  desktop_bridge.py  desktop_state.py  dogfood.py  dogfood_render.py  editing.py  editorial.py  evidence.py  fanout.py  image_tool.py  lifecycle.py  mcp_server.py  memory.py  ontology.py  planning.py  provider_plan.py  release.py  runtime_guard.py  secrets.py  setup.py  sleep.py  toolbox.py  transcription.py
tests/: __init__.py  conftest.py  media_fixtures.py  test_agent_team_runtime.py  test_agent_tools.py  test_creator_memory_contract.py  test_desktop_runtime.py  test_dogfood_cli.py  test_dogfood_preparation.py  test_dogfood_render.py  test_dotenv_secret_resolver.py  test_editorial.py  test_governance_runtime.py  test_image_tool.py  test_long_form_planning.py  test_long_form_publish_ready.py  test_mcp_server.py  test_ontology_records.py  test_provider_plan.py  test_release_bar.py  test_release_evidence_store.py  test_setup.py  test_short_form_publish_ready.py  test_sleep_promotion_contract.py  test_transcription.py  test_verification_and_run_lifecycle.py
(+11 files in other folders)
