[package]
name = "reelbrain-desktop"
version = "0.1.1"
description = "Creator-facing desktop shell for ReelBrain"
authors = ["ReelBrain contributors"]
edition = "2021"

[lib]
name = "reelbrain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
